--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cypressRun":"node_modules\\.bin\\cypress run",
+    "cypressOpen":"node_modules\\.bin\\cypress open"
   },
   "author": "",
   "license": "ISC",
